# bitknotsrs

./: .cursor  .gitattributes  .gitignore  Cargo.toml  README.md  config.toml  justfile  test-config.toml
.issues/: README.md
.issues/drafts/: .gitkeep
.issues/temp/: .gitkeep
.issues/templates/: issue-checklist.md  issue-template.md  patch-template.md
config/: mainnet.toml  regtest.toml  testnet.toml
src/: api.rs  config.rs  error.rs  events.rs  lib.rs  logging.rs  main.rs  metrics.rs  rpc.rs  storage.rs
src/actors/: chain.rs  mempool.rs  mod.rs  network.rs  storage.rs
src/network/: constants.rs  mod.rs
