[package]
name = "bitknotsrs"
version = "0.1.0"
edition = "2021"
authors = ["BitKnotsRS Team"]
description = "BitKnotsRS - A knots-inspired Bitcoin node implementation in Rust"
license = "MIT OR Apache-2.0"

[dependencies]
# Actor system and web framework
actix = "0.13"
actix-web = "4.4"
actix-rt = "2.9"

# Storage
rocksdb = "0.21"

# RPC and networking
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
zmq = "0.10"
tokio = { version = "1.0", features = ["full"] }

# Bitcoin protocol
bitcoin = "0.31"
secp256k1 = "0.28"

# Kubernetes integration
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.21"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Configuration and utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
